Add png imageio internal plugin open-module